alamcenes 16 char y ventana tpv

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19014,34 +19014,34 @@ STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Mostrador"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 216, 74, 103, 12
-  CONTROL "", 192, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 74, 66, 12
-  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 216, 88, 208, 12
-  CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 216, 102, 103, 12
-  CONTROL "", 193, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 358, 102, 66, 12
-  CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 216, 116, 208, 12
-  CONTROL "", 103, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 216, 130, 55, 12
-  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 273, 130, 151, 12
-  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 216, 144, 103, 12
-  CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER, 357, 144, 67, 12
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 216, 158, 79, 12
-  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 298, 158, 126, 12
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 469, 74, 60, 12
+  CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 208, 74, 103, 12
+  CONTROL "", 192, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 350, 74, 66, 12
+  CONTROL "", 191, "Edit", WS_BORDER|WS_TABSTOP, 208, 88, 208, 12
+  CONTROL "", 101, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 208, 102, 103, 12
+  CONTROL "", 193, "Edit", ES_RIGHT|ES_AUTOHSCROLL|WS_BORDER, 350, 102, 66, 12
+  CONTROL "", 102, "Edit", WS_BORDER|WS_TABSTOP, 208, 116, 208, 12
+  CONTROL "", 103, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 208, 130, 55, 12
+  CONTROL "", 104, "Edit", WS_BORDER|WS_TABSTOP, 265, 130, 151, 12
+  CONTROL "", 105, "Edit", WS_BORDER|WS_TABSTOP, 208, 144, 103, 12
+  CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER, 349, 144, 67, 12
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 208, 158, 79, 12
+  CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 290, 158, 126, 12
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 460, 74, 70, 12
   CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 531, 74, 146, 12
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 469, 88, 60, 12
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 460, 88, 70, 12
   CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 531, 88, 146, 12
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 469, 102, 60, 12
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 460, 102, 70, 12
   CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 531, 102, 146, 12
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 469, 116, 60, 12
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 460, 116, 70, 12
   CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 531, 116, 146, 12
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 469, 130, 60, 12
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 460, 130, 70, 12
   CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 531, 130, 146, 12
-  CONTROL "", 242, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 469, 144, 60, 12
+  CONTROL "", 242, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 460, 144, 70, 12
   CONTROL "", 243, "Edit", ES_RIGHT|WS_BORDER, 531, 144, 146, 12
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 469, 158, 60, 12
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 460, 158, 70, 12
   CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 531, 158, 146, 12
   CONTROL "", 210, "TXBrowse", WS_TABSTOP|0x00300000, 3, 173, 674, 206
-  CONTROL "TBitmap", 600, "TBitmap", 0x00800000, 2, 386, 63, 50
+  CONTROL "TBitmap", 600, "TBitMap", 0x00800000, 2, 386, 63, 50
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 214, 383, 130, 12
   CONTROL "", 710, "Edit", WS_BORDER|WS_TABSTOP, 348, 383, 130, 12
   CONTROL "", 711, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 481, 383, 70, 12
@@ -19058,33 +19058,33 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 130, "Edit", WS_BORDER, 75, 88, 83, 12
   CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 45, 102, 113, 12
   CONTROL "", 200, "Edit", WS_BORDER|WS_TABSTOP, 45, 116, 93, 12
-  CONTROL "", 201, "TBitmap", 0x00800000, 141, 116, 17, 12
+  CONTROL "", 201, "TBitMap", 0x00800000, 141, 116, 17, 12
   CONTROL "", 140, "Edit", ES_RIGHT|WS_BORDER, 45, 130, 113, 12
   CONTROL "", 150, "Edit", ES_RIGHT|WS_BORDER, 45, 144, 113, 12
   CONTROL "Copias", 260, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 3, 161, 41, 9
   CONTROL "", 261, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 45, 158, 113, 12
   CONTROL "Fecha", -1, "Static", WS_GROUP, 3, 105, 41, 9
-  CONTROL "Caja", -1, "Static", WS_GROUP, 434, 105, 30, 9
-  CONTROL "Pago", -1, "Static", WS_GROUP, 434, 77, 30, 9
+  CONTROL "Caja", -1, "Static", WS_GROUP, 423, 105, 30, 9
+  CONTROL "Pago", -1, "Static", WS_GROUP, 423, 77, 30, 9
   CONTROL "Divisa", -1, "Static", WS_GROUP, 3, 119, 41, 9
-  CONTROL "Almacén", -1, "Static", WS_GROUP, 434, 91, 30, 9
+  CONTROL "Almacén", -1, "Static", WS_GROUP, 423, 91, 30, 9
   CONTROL "Cobrado", 11, "Static", WS_GROUP, 3, 133, 41, 9
-  CONTROL "Cliente", -1, "Static", WS_GROUP, 171, 77, 40, 9
+  CONTROL "Cliente", -1, "Static", WS_GROUP, 165, 77, 40, 9
   CONTROL "", 460, "TMeter", 0x00000000, 2, 449, 675, 8
   CONTROL "Número", -1, "Static", WS_GROUP, 3, 77, 41, 9
-  CONTROL "Precios", -1, "Static", WS_GROUP, 324, 77, 29, 9
-  CONTROL "Riesgo", -1, "Static", WS_GROUP, 324, 105, 27, 9
-  CONTROL "Tarifa", -1, "Static", WS_GROUP, 434, 119, 30, 9
-  CONTROL "Direcciones", -1, "Static", WS_GROUP, 171, 161, 40, 9
-  CONTROL "Agente", -1, "Static", WS_GROUP, 434, 133, 30, 9
-  CONTROL "Ruta", -1, "Static", WS_GROUP, 434, 161, 30, 9
-  CONTROL "%Com.", -1, "Static", WS_GROUP, 434, 147, 30, 9
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 171, 91, 40, 9
-  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 171, 105, 40, 9
-  CONTROL "Domicilio", -1, "Static", WS_GROUP, 171, 119, 40, 9
-  CONTROL "CP/Pobl.", -1, "Static", WS_GROUP, 171, 133, 40, 9
-  CONTROL "Provincia", -1, "Static", WS_GROUP, 171, 147, 40, 9
-  CONTROL "Teléfono", -1, "Static", WS_GROUP, 324, 147, 31, 9
+  CONTROL "Precios", -1, "Static", WS_GROUP, 316, 77, 29, 9
+  CONTROL "Riesgo", -1, "Static", WS_GROUP, 316, 105, 27, 9
+  CONTROL "Tarifa", -1, "Static", WS_GROUP, 423, 119, 30, 9
+  CONTROL "Direcciones", -1, "Static", WS_GROUP, 165, 161, 40, 9
+  CONTROL "Agente", -1, "Static", WS_GROUP, 423, 133, 30, 9
+  CONTROL "Ruta", -1, "Static", WS_GROUP, 423, 161, 30, 9
+  CONTROL "%Com.", -1, "Static", WS_GROUP, 423, 147, 30, 9
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 165, 91, 40, 9
+  CONTROL "N.I.F.", -1, "Static", WS_GROUP, 165, 105, 40, 9
+  CONTROL "Domicilio", -1, "Static", WS_GROUP, 165, 119, 40, 9
+  CONTROL "CP/Pobl.", -1, "Static", WS_GROUP, 165, 133, 40, 9
+  CONTROL "Provincia", -1, "Static", WS_GROUP, 165, 147, 40, 9
+  CONTROL "Teléfono", -1, "Static", WS_GROUP, 316, 147, 31, 9
   CONTROL "Usuario", -1, "Static", WS_GROUP, 3, 91, 41, 9
   CONTROL "Devuelto", -1, "Static", WS_GROUP, 3, 147, 41, 9
   CONTROL "Margen", 800, "Static", WS_GROUP, 168, 386, 27, 9
@@ -19107,20 +19107,20 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 106, "Edit", ES_AUTOHSCROLL|WS_BORDER, 473, 150, 72, 13
   CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 222, 165, 116, 13
   CONTROL "", 231, "Edit", WS_BORDER|WS_TABSTOP, 340, 165, 205, 13
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 589, 75, 50, 13
-  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 641, 75, 202, 13
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 589, 90, 50, 13
-  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 641, 90, 202, 13
-  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 589, 105, 50, 13
-  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 641, 105, 202, 13
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 589, 120, 50, 13
-  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 641, 120, 202, 13
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 589, 135, 50, 13
-  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 641, 135, 202, 13
-  CONTROL "", 242, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 589, 150, 50, 13
-  CONTROL "", 243, "Edit", ES_RIGHT|WS_BORDER, 641, 150, 202, 13
-  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 589, 165, 50, 13
-  CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 641, 165, 202, 13
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 589, 75, 70, 13
+  CONTROL "", 181, "Edit", WS_BORDER|WS_TABSTOP, 661, 75, 182, 13
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 589, 90, 70, 13
+  CONTROL "", 171, "Edit", WS_BORDER|WS_TABSTOP, 661, 90, 182, 13
+  CONTROL "", 160, "Edit", WS_BORDER|WS_TABSTOP, 589, 105, 70, 13
+  CONTROL "", 161, "Edit", WS_BORDER|WS_TABSTOP, 661, 105, 182, 13
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 589, 120, 70, 13
+  CONTROL "", 221, "Edit", WS_BORDER|WS_TABSTOP, 661, 120, 182, 13
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 589, 135, 70, 13
+  CONTROL "", 241, "Edit", WS_BORDER|WS_TABSTOP, 661, 135, 182, 13
+  CONTROL "", 242, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 589, 150, 70, 13
+  CONTROL "", 243, "Edit", ES_RIGHT|WS_BORDER, 661, 150, 182, 13
+  CONTROL "", 250, "Edit", WS_BORDER|WS_TABSTOP, 589, 165, 70, 13
+  CONTROL "", 251, "Edit", WS_BORDER|WS_TABSTOP, 661, 165, 182, 13
   CONTROL "", 210, "TXBrowse", WS_TABSTOP|0x00300000, 3, 182, 840, 341
   CONTROL "TBitmap", 600, "TBitMap", 0x00800000, 3, 526, 63, 50
   CONTROL "", 408, "Edit", ES_RIGHT|WS_BORDER|WS_TABSTOP, 308, 526, 140, 13
