--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16037,7 +16037,8 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 110, "TXBrowse", 0x00200000, 113, 10, 108, 183
   CONTROL "Todas", 113, "Button", WS_TABSTOP, 113, 197, 50, 14
   CONTROL "Ninguna", 114, "Button", WS_TABSTOP, 171, 197, 50, 14
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 290, 14, 292, 12
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 290, 14, 278, 12
+  CONTROL "", 211, "TBtnBmp", 0x00000000, 570, 14, 12, 11
   CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 290, 27, 292, 12
   CONTROL "", 600, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 290, 58, 70, 12
   CONTROL "Bloq.", 300, "Button", BS_AUTOCHECKBOX|BS_LEFTTEXT|WS_TABSTOP, 288, 99, 32, 10
