--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -80,3 +80,4 @@ delete2_24 BITMAP "..\\bmp\\delete2_24.bmp"
 printer_ok BITMAP "..\\bmp\\printer_ok.bmp"
 printer_delete BITMAP "..\\bmp\\printer_delete.bmp"
 printer_new BITMAP "..\\bmp\\printer_new.bmp"
+photo_scenery_16 BITMAP "..\\bmp\\photo_scenery_16.bmp"
