--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1940,6 +1940,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 305, "Button", WS_TABSTOP, 473, 319, 42, 36
   CONTROL "", 505, "Button", WS_TABSTOP, 301, 319, 42, 36
   CONTROL "", 601, "Button", WS_TABSTOP, 516, 289, 29, 28
+  CONTROL "", 510, "Button", WS_TABSTOP, 601, 319, 42, 36
 }
 
 TPV_LISTA_TICKET_1280X752 DIALOG DISCARDABLE 4, 47, 548, 255
