--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -81,3 +81,4 @@ printer_ok BITMAP "..\\bmp\\printer_ok.bmp"
 printer_delete BITMAP "..\\bmp\\printer_delete.bmp"
 printer_new BITMAP "..\\bmp\\printer_new.bmp"
 photo_scenery_16 BITMAP "..\\bmp\\photo_scenery_16.bmp"
+scales_32 BITMAP "..\\bmp\\scales_32.bmp"
