--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -3918,38 +3918,25 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 400, "TXBrowse", 0x00200000, 44, 35, 598, 153
 }
 
-CNF_CAJ_TPV DIALOG DISCARDABLE 77, 58, 288, 215
+CNF_CAJ_TPV DIALOG DISCARDABLE 77, 58, 288, 103
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Configuración cajón portamonedas"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 80, "Edit", WS_BORDER|WS_TABSTOP, 73, 10, 50, 12
-  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 73, 22, 206, 12
-  CONTROL "Driver de windows", 200, "Button", BS_AUTORADIOBUTTON, 9, 51, 71, 10
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 73, 63, 192, 12
-  CONTROL "", 171, "TBtnBmp", 0x00000000, 267, 63, 12, 11
-  CONTROL "Puerto de comunicaciones", 210, "Button", BS_AUTORADIOBUTTON, 9, 80, 98, 10
-  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|CBS_DISABLENOSCROLL|WS_TABSTOP, 73, 93, 45, 68
-  CONTROL "", 120, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 73, 107, 78, 64
-  CONTROL "", 130, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 73, 121, 78, 64
-  CONTROL "", 140, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 73, 135, 78, 64
-  CONTROL "", 150, "ComboBox", WS_BORDER|CBS_DROPDOWNLIST|WS_TABSTOP, 73, 149, 78, 64
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 73, 177, 206, 12
-  CONTROL "&Test", 160, "Button", WS_TABSTOP, 2, 197, 50, 14
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 181, 197, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 234, 197, 50, 14
-  CONTROL "Puerto", -1, "Static", WS_GROUP, 19, 96, 23, 8
-  CONTROL "Código", -1, "Static", WS_GROUP, 9, 180, 26, 8
-  CONTROL "Salida", -1, "Button", BS_GROUPBOX, 2, 38, 282, 128
+  CONTROL "", 80, "Edit", WS_BORDER|WS_TABSTOP, 48, 10, 50, 11
+  CONTROL "", 90, "Edit", WS_BORDER|WS_TABSTOP, 48, 22, 232, 11
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 47, 50, 219, 10
+  CONTROL "", 171, "TBtnBmp", 0x00000000, 267, 50, 12, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 47, 62, 232, 11
+  CONTROL "&Test", 160, "Button", WS_TABSTOP, 2, 85, 50, 14
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 181, 85, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 234, 85, 50, 14
+  CONTROL "Apertura", -1, "Static", WS_GROUP, 7, 65, 32, 8
+  CONTROL "Propiedades", -1, "Button", BS_GROUPBOX, 2, 38, 282, 41
   CONTROL "General", -1, "Button", BS_GROUPBOX, 2, 1, 282, 36
-  CONTROL "Código", -1, "Static", WS_GROUP, 9, 13, 24, 8
-  CONTROL "Nombre", -1, "Static", WS_GROUP, 9, 25, 27, 8
-  CONTROL "Bits / seg.", -1, "Static", WS_GROUP, 19, 109, 44, 8
-  CONTROL "Bits / parada", -1, "Static", WS_GROUP, 19, 124, 44, 8
-  CONTROL "Bits / datos", -1, "Static", WS_GROUP, 19, 139, 44, 8
-  CONTROL "Paridad", -1, "Static", WS_GROUP, 19, 153, 44, 8
-  CONTROL "Apertura cajón", -1, "Button", BS_GROUPBOX, 2, 167, 282, 26
-  CONTROL "Impresora", -1, "Static", WS_GROUP, 19, 66, 35, 8
+  CONTROL "Código", -1, "Static", WS_GROUP, 7, 13, 24, 8
+  CONTROL "Nombre", -1, "Static", WS_GROUP, 7, 25, 27, 8
+  CONTROL "Impresora", -1, "Static", WS_GROUP, 7, 53, 35, 8
 }
 
 CNF_DEF_CLI DIALOG DISCARDABLE 36, 31, 254, 198
