--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -92,7 +92,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "TMeter", WS_TABSTOP|0x00800000, 2, 322, 182, 4
+  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 2, 322, 182, 4
   CONTROL "", 201, "Button", WS_TABSTOP, 237, 8, 40, 38
   CONTROL "", 202, "Button", WS_TABSTOP, 237, 61, 40, 38
   CONTROL "", 203, "Button", WS_TABSTOP, 237, 114, 40, 38
@@ -372,7 +372,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "S&iguiente >", 110, "Button", WS_TABSTOP, 445, 347, 50, 40
   CONTROL "&Cancelar", 120, "Button", WS_TABSTOP, 500, 347, 50, 40
   CONTROL "&Ayuda", 599, "Button", WS_TABSTOP, 555, 347, 50, 40
-  CONTROL "TMeter", 130, "TMeter", WS_TABSTOP, 2, 326, 606, 5
+  CONTROL "msctls_progress32", 130, "msctls_progress32", WS_TABSTOP, 2, 326, 606, 5
   CONTROL "Recalcular", 300, "Button", WS_TABSTOP, 336, 347, 50, 40
   CONTROL "", 140, "Static", WS_GROUP, 3, 334, 605, 10
 }
@@ -503,7 +503,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "TMeter", 0x00000000, 361, 314, 182, 4
+  CONTROL "", 460, "msctls_progress32", 0x00000000, 361, 314, 182, 4
   CONTROL "", 201, "Button", WS_TABSTOP, 6, 6, 40, 38
   CONTROL "", 202, "Button", WS_TABSTOP, 6, 58, 40, 38
   CONTROL "", 203, "Button", WS_TABSTOP, 6, 111, 40, 38
@@ -718,7 +718,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "TMeter", WS_TABSTOP|0x00800000, 4, 429, 205, 6
+  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 4, 429, 205, 6
   CONTROL "", 501, "Button", BS_BOTTOM|BS_MULTILINE|WS_TABSTOP, 217, 83, 61, 64
   CONTROL "", 203, "Button", BS_MULTILINE|WS_TABSTOP, 217, 170, 61, 64
   CONTROL "", 204, "Button", BS_MULTILINE|WS_TABSTOP, 281, 170, 61, 64
@@ -899,7 +899,7 @@ FONT 12, "Segoe UI"
   CONTROL "< &Anterior", 100, "Button", WS_TABSTOP, 269, 226, 40, 22
   CONTROL "S&iguiente >", 110, "Button", WS_TABSTOP, 310, 226, 41, 22
   CONTROL "&Cancelar", 120, "Button", WS_TABSTOP, 352, 226, 40, 22
-  CONTROL "TMeter", 130, "TMeter", WS_TABSTOP, 44, 218, 348, 5
+  CONTROL "msctls_progress32", 130, "msctls_progress32", WS_TABSTOP, 44, 218, 348, 5
   CONTROL "Recalcular", 300, "Button", WS_TABSTOP, 228, 226, 40, 22
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Cierre de sesión", -1, "Static", WS_GROUP, 44, 3, 178, 13
@@ -1011,7 +1011,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "TMeter", WS_TABSTOP|0x00800000, 473, 434, 202, 6
+  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 473, 434, 202, 6
   CONTROL "", 116, "Button", WS_TABSTOP, 626, 404, 50, 28
   CONTROL "", 115, "Button", WS_TABSTOP, 626, 375, 50, 28
   CONTROL "", 113, "Button", WS_TABSTOP, 626, 317, 50, 28
@@ -1544,7 +1544,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 1131, "TBitmap", 0x00800000, 97, 163, 18, 11
   CONTROL "", 1140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 59, 188, 210, 11
   CONTROL "", 1150, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 59, 201, 210, 11
-  CONTROL "", 1160, "TMeter", 0x00000000, 59, 225, 210, 10
+  CONTROL "", 1160, "msctls_progress32", 0x00000000, 59, 225, 210, 10
   CONTROL "Todas", 1170, "TWebBtn", 0x00000000, 290, 12, 50, 11
   CONTROL "Ninguna", 1180, "TWebBtn", 0x00000000, 345, 12, 50, 11
   CONTROL "Serie A", 1190, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 291, 25, 40, 12
@@ -1614,7 +1614,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 460, "TMeter", WS_TABSTOP|0x00800000, 4, 413, 205, 6
+  CONTROL "", 460, "msctls_progress32", WS_TABSTOP|0x00800000, 4, 413, 205, 6
   CONTROL "", 501, "Button", BS_BOTTOM|BS_MULTILINE|WS_TABSTOP, 302, 83, 61, 64
   CONTROL "", 203, "Button", BS_MULTILINE|WS_TABSTOP, 302, 167, 61, 64
   CONTROL "", 204, "Button", BS_MULTILINE|WS_TABSTOP, 366, 167, 61, 64
@@ -1900,7 +1900,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 400, "TMeter", WS_TABSTOP|0x00800000, 1, 356, 688, 4
+  CONTROL "", 400, "msctls_progress32", WS_TABSTOP|0x00800000, 1, 356, 688, 4
   CONTROL "", 503, "Button", WS_TABSTOP, 387, 319, 42, 36
   CONTROL "", 115, "Button", NOT WS_VISIBLE|WS_TABSTOP, 644, 281, 42, 36
   CONTROL "", 113, "Button", NOT WS_VISIBLE|WS_TABSTOP, 644, 208, 42, 36
@@ -1966,7 +1966,7 @@ FONT 12, "Segoe UI"
   CONTROL "S&iguiente >", 110, "Button", WS_TABSTOP, 251, 173, 45, 25
   CONTROL "&Cancelar", 120, "Button", WS_TABSTOP, 298, 173, 45, 25
   CONTROL "&Ayuda", 599, "Button", WS_TABSTOP, 346, 173, 45, 25
-  CONTROL "TMeter", 130, "TMeter", WS_TABSTOP, 44, 166, 348, 5
+  CONTROL "msctls_progress32", 130, "msctls_progress32", WS_TABSTOP, 44, 166, 348, 5
   CONTROL "Recalcular", 300, "Button", WS_TABSTOP, 157, 173, 45, 25
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Cierre de sesión", -1, "Static", WS_GROUP, 44, 3, 178, 15
@@ -2332,7 +2332,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
   CONTROL "", -1, "Button", BS_GROUPBOX, -245, -32, 117, 81
-  CONTROL "", 400, "TMeter", WS_TABSTOP|0x00800000, 1, 257, 523, 5
+  CONTROL "", 400, "msctls_progress32", WS_TABSTOP|0x00800000, 1, 257, 523, 5
   CONTROL "", 503, "Button", WS_TABSTOP, 361, 223, 32, 32
   CONTROL "", 115, "Button", NOT WS_VISIBLE|WS_TABSTOP, 492, 189, 32, 32
   CONTROL "", 113, "Button", NOT WS_VISIBLE|WS_TABSTOP, 492, 123, 32, 32
