--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19728,3 +19728,14 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 200, "msctls_progress32", 0x00000000, 191, 385, 474, 4
 }
 
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+INFO_4 DIALOG DISCARDABLE 32, 0, 670, 330
+STYLE WS_CHILD|DS_3DLOOK
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "", 300, "TXBrowse", WS_TABSTOP|0x00300000, 44, 32, 621, 288
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "Información de máquinas", -1, "Static", SS_LEFTNOWORDWRAP, 44, 3, 446, 8
+}
+
